# trading-system

./: .env.example  .env.local  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile.runner  cloudbuild.yaml  docker-compose.yml  e execution date for blackout checks in live mode
.github/workflows/: deploy.yml  security-scan.yml
core/: Cargo.toml  build.rs
core/src/: error.rs  lib.rs  main.rs  types.rs
core/src/bridge/: mod.rs
core/src/broker/: alpaca.rs  ibkr.rs  mod.rs  paper.rs
core/src/gcp/: mod.rs  pubsub.rs
core/src/market_data/: feed.rs  mod.rs
core/src/order/: manager.rs  mod.rs
core/src/risk/: mod.rs
docs/: GITHUB-README.md  api-docs.md  backtest-analysis.md  career-plan.md  codebase-audit.md  competitive-analysis.md  deep-code-review.md  fmea.md  handoff.md  infrastructure-report.md  interview-prep.md  linkedin-posts.md  looker_studio_setup.md  meta-position-analysis.md  performance-report.md  phase6-spec.md  portfolio-writeup.md  runbook.md  security-audit.md  strategy-research-report.md  strategy.md  test-coverage-report.md  trade-log.md  twitter-threads.md
docs/adr/: ADR-001-cloud-run-jobs.md  ADR-002-python-only-live-path.md  ADR-003-paper-trading-gate.md  README.md
docs/blog-drafts/: first-profitable-trade.md
docs/event-checklists/: cpi-may-14.md
docs/postmortem/: 2026-04-28-precious-metals-concentration.md
docs/weekly-reviews/: 2026-W20-review.md
gcp/bigquery/schema/: ohlcv.json  signals.json  trades.json
gcp/terraform/: cloud_run_jobs.tf  cloud_sql.tf  main.tf  monitoring.tf  outputs.tf  paper.tfvars  paper.tfvars.example  variables.tf
infra/grafana/dashboards/: quantai_ab_attribution.json  quantai_gate_progress.json  quantai_health.json  quantai_sector_exposure.json  quantai_strategy.json  quantai_trading.json
infra/postgres/: init.sql  migration_002_system_metrics.sql  migration_003_signal_type.sql  migration_005_backfill_daily_pnl_20260423.sql  migration_006_orders_status_lifecycle.sql  migration_007_orders_test_trade_flag.sql
migrations/: 008_reconcile_apr_pm_incident.sql
proto/: trading.proto
scripts/: _db.py  backup_postgres.sh  calendar_filter_backtest_compare.py  debug_info.py  earnings_filter_backtest_compare.py  error_report.py  gate_progress.py  gen_proto.sh  log_system_health.py  migrate_to_cloud_sql.sh  morning_report.py  recompute_sharpe.py  reconcile_alpaca_fills.py  run_daily.sh  run_first_live_fill.sh  seed_alpaca.py  seed_ohlcv.sql  seed_yfinance.py  telegram_alert.py  test_alpaca_connection.py  test_ibkr_connection.py  update_claude_md_with_fill.py  update_daily_pnl.py  vix_filter_backtest_compare.py  vix_threshold_sweep.py
scripts/tests/: conftest.py  test_cron_flow_e2e.py  test_error_report.py  test_gate_progress.py  test_monitoring.py  test_obsidian_sync.py  test_reconcile_populates_positions.py  test_reconcile_resilience.py  test_risk_gaps.py  test_update_daily_pnl_equity_delta.py
strategy/: conftest.py  improvement_log.md  requirements.txt  run_strategy.py
strategy/backtest_results/: post_trend_ride_20260420.md
strategy/simulations/: 1m_thb_simulation.json  param_sweep.py  run_1m_thb.py
strategy/src/: __init__.py  db.py
strategy/src/backtester/: __init__.py  engine.py
strategy/src/bridge/: __init__.py  alpaca_direct.py  client.py  trading_pb2.py  trading_pb2_grpc.py
strategy/src/data/: __init__.py  alpaca_fetcher.py  fetcher.py  yfinance_fetcher.py
strategy/src/filters/: __init__.py  economic_calendar.py
strategy/src/gcp/: __init__.py
strategy/src/signals/: __init__.py  (+1 more)
strategy/tests/: test_alpaca_direct.py  test_earnings_calendar.py  test_economic_calendar.py  test_kgc_dedup.py  test_phase2.py  test_phase3.py  test_regime_filter.py  test_rsi_atr.py  test_signal_type_attribution.py  test_trailing_stop.py  test_trend_ride.py  test_vix_filter.py
(+3 files in other folders)
