# trading-system/Cargo.toml
[workspace]
members = ["core"]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["QuantAI Trading System"]
license     = "UNLICENSED"

[workspace.dependencies]
# Decimal arithmetic — ALWAYS use for prices/quantities/P&L
rust_decimal        = { version = "1.36", features = ["serde-float"] }
rust_decimal_macros = "1.36"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ID + time
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
